--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -8,7 +8,8 @@
   height: 75vh;
   text-align: center;
   color: $white;
-  @include images("../img/large/header-bgc-large.jpg");
+  @include images("../img/small/header-bgc-small.jpg");
+  background-attachment: scroll;
 
   &__title {
     font-size: 4.8rem;
