--- a/sass/components/_hero-img.scss
+++ b/sass/components/_hero-img.scss
@@ -2,6 +2,7 @@
   position: relative;
   padding: 10em 2em;
   @include images("../img/small/header-bgc-small.jpg");
+  background-attachment: scroll;
   background-position: right;
   text-align: center;
   color: $white;
@@ -31,8 +32,7 @@
 @media (min-width: 992px) {
   .hero-img {
     padding: 20em 2em;
-    @include images("../img/large/header-bgc-large.jpg");
-    background-position: right;
+    background-image: url("../img/large/header-bgc-large.jpg");
 
     &__text {
       font-size: 2.2rem;
